[gd_scene load_steps=2 format=3 uid="uid://bfgjb4e770rse"]

[ext_resource type="Script" path="res://build.gd" id="1_dgc0j"]

[node name="build" type="Node"]
script = ExtResource("1_dgc0j")

[node name="Container" type="Container" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="othergene" type="Button" parent="."]
offset_left = 8.0
offset_top = 141.0
offset_right = 107.0
offset_bottom = 211.0
text = "Lacl
"

[node name="gfp" type="Button" parent="."]
offset_left = 8.0
offset_top = 37.0
offset_right = 105.0
offset_bottom = 108.0
text = "GFP"

[node name="Pop" type="Button" parent="."]
offset_right = 18.0
offset_bottom = 31.0
text = "X"

[node name="Label" type="Label" parent="."]
anchors_preset = -1
anchor_right = 0.035
anchor_bottom = 0.018
offset_left = 531.0
offset_top = 40.0
offset_right = 621.68
offset_bottom = 180.336

[node name="save" type="Button" parent="."]
offset_left = 975.0
offset_top = 19.0
offset_right = 1027.0
offset_bottom = 65.0
text = "save"

[node name="exit" type="Button" parent="."]
offset_left = 1060.0
offset_top = 21.0
offset_right = 1112.0
offset_bottom = 67.0
text = "exit
"

[node name="Button" type="Button" parent="."]
offset_left = 17.0
offset_top = 244.0
offset_right = 97.0
offset_bottom = 296.0
text = "AMPr"

[connection signal="button_down" from="othergene" to="." method="_on_othergene_button_down"]
[connection signal="button_down" from="gfp" to="." method="_on_gfp_button_down"]
[connection signal="button_down" from="Pop" to="." method="_on_pop_button_down"]
[connection signal="button_down" from="save" to="." method="_on_save_button_down"]
[connection signal="button_down" from="exit" to="." method="_on_exit_button_down"]
[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
